--- a/style.css
+++ b/style.css
@@ -44,30 +44,66 @@
 /*content section*/
 
 .main-container{
-display: -webkit-flex;
+
 display: flex;
   border: 1px solid black;
   overflow: scroll;
   position: relative;
   padding: 100px;
-
 }
 
 
-.column.large{
+.main-container .column.large, .second-box, .third-box, .fourth-box, .fifth-box,  .sixth-box h1, p,  .seventh-box{
   width: 630px;
   border: 1px solid black;
-  
+}
+
+.column.large, .column.medium, .column-small {
+flex-direction: column;
+flex-wrap: wrap;
+justify-content: space-around;
+
+.column.medium {
+  align-items: center;
 }
 
 
-
-.column.medium{
+}
+.column.medium, .washington-box h1, p, .cat-box, .brooklyn-box{
   width: 300px;
   border: 1px solid black;
+
+
 }
 
-.column.small{
-  width: 240px;
-  border: 1px solid black;
+
+
+
+.first-box p{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  width: 629px;
+  height: 300px;
+  color: white;
+  font-size: 36px;
+  text-align: left;
+
+}
+
+.fifth-box p{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+width: 300px;
+height: 299px;
+color: white;
+font-size: 24px;
+text-align: center;
+
+}
+
+.seventh-box p{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
+width: 300px;
+height: 299px;
+color: white;
+font-size: 36px;
+text-align: center;
 }
