--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+.
 .container{
   display: flex;
   align-items: center;
@@ -49,7 +50,7 @@ display: flex;
   border: 1px solid black;
   overflow: scroll;
   position: relative;
-  padding: 100px;
+  padding: 20px;
 }
 
 
@@ -60,22 +61,19 @@ display: flex;
 
 .column.large, .column.medium, .column-small {
 flex-direction: column;
-flex-wrap: wrap;
 justify-content: space-around;
 
-.column.medium {
-  align-items: center;
-}
 
 
 }
-.column.medium, .washington-box h1, p, .cat-box, .brooklyn-box{
+.column.medium, .washington-box h1, p, .cookie-box, .brooklyn-box{
   width: 300px;
   border: 1px solid black;
 
 
 }
 
+.column.small,
 
 
 
@@ -106,4 +104,12 @@ height: 299px;
 color: white;
 font-size: 36px;
 text-align: center;
+}
+.cat-box p{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+  width: 300px;
+  height: 299px;
+  color: white;
+  font-size: 24px;
+  text-align:center;
 }
